--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.rootLogger=DEBUG, FILE
 
 # File
 log4j.appender.FILE=org.apache.log4j.FileAppender
-log4j.appender.FILE.File=${user.home}/fr24-reader/log.log
+log4j.appender.FILE.File=/home/pi/fr24-reader.log
 log4j.appender.FILE.ImmediateFlush=true
 log4j.appender.FILE.Threshold=debug
 log4j.appender.FILE.Append=false
